Legg til todo-punkt

--- a/todo.org
+++ b/todo.org
@@ -1,9 +1,10 @@
 * MVP [2/2]
 ** DONE Lenke tilbake
 ** DONE Banan-themed parentes-header
-* Snart [0/7]
+* Snart [0/8]
 ** TODO 404-side
 ** TODO Config for 404 i nginx
+** TODO RSS
 ** TODO Varnish
 ** TODO Favicon
 ** TODO Profil-sider
