--- a/todo.org
+++ b/todo.org
@@ -1,10 +1,10 @@
 * MVP [2/2]
 ** DONE Lenke tilbake
 ** DONE Banan-themed parentes-header
-* Snart [0/8]
+* Snart [1/8]
 ** TODO 404-side
 ** TODO Config for 404 i nginx
-** TODO RSS
+** DONE RSS
 ** TODO Varnish
 ** TODO Favicon
 ** TODO Profil-sider
